--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
     executor: terraform/default
     steps:
       - checkout
+      - terraform/install:
+          terraform_version: 1.3.5
       - run:
           command: |
             echo 'aws_region = "$aws_region"' >> config.aws.backend
