--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - terraform/install:
-          terraform_version: 1.2.9
+          terraform_version: latest
       - run:
           command: |
             echo 'aws_region = "$aws_region"' >> config.aws.backend
