--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - terraform/install:
-          terraform_version: latest
+          terraform_version: "1.3.5"
       - run:
           command: |
             echo 'aws_region = "$aws_region"' >> config.aws.backend
