--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 1.3.5
+          terraform_version: "1.2"
       - run:
           command: |
             echo 'aws_region = "$aws_region"' >> config.aws.backend
