--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - checkout
       - terraform/install:
-          arch: amd64
-          os: linux
-          terraform_version: "1.2"
+        # terraform_version: "1.2"
       - run:
           command: |
             echo 'aws_region = "$aws_region"' >> config.aws.backend
