--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       - checkout
       - run:
           command: |
-            echo "aws_region = \"$aws_region\"" >> config.aws.backend
-            echo "aws_access_key_id = \"$aws_access_key\"" >> config.aws.backend
-            echo "aws_secret_access_key = \"$aws_secret_key\"" >> config.aws.backend
+            echo "region = \"$aws_region\"" >> config.aws.backend
+            echo "access_key_id = \"$aws_access_key\"" >> config.aws.backend
+            echo "secret_access_key = \"$aws_secret_key\"" >> config.aws.backend
       - run:
           command: |
             terraform init -reconfigure -backend-config=config.aws.backend
