--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
     resource_class: medium
-    environment:
-      TF_VAR_gcp_credentials: $gcp_credentials
-      TF_VAR_gcp_region: $gcp_region
-      TF_VAR_gcp_zone: $gcp_zone
+      # environment:
+      # TF_VAR_gcp_credentials: $gcp_credentials
+      # TF_VAR_gcp_region: $gcp_region
+      # TF_VAR_gcp_zone: $gcp_zone
     steps:
       - checkout
       - run:
