--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
             terraform validate
       - run:
           command: |
-            terraform plan
+            terraform plan -out=tfplan
       - run:
           command: |
-            terraform apply -backend-config=config.aws.backend
+            terraform apply -auto-approve tfplan
 
 workflows:
   deploy:
