--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,9 @@ jobs:
 workflows:
   deploy:
     triggers:
-      schedule:
-        branches:
-          only: main
+      - schedule:
+          branches:
+            only: main
     jobs:
       - config:
           context:
@@ -69,9 +69,9 @@ workflows:
             - n3-zeus
   destroy:
     triggers:
-      schedule:
-        branches:
-          only: sleep
+      - schedule:
+          branches:
+            only: sleep
     jobs:
       - config:
           context:
