--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             echo "region = \"$aws_region\"" >> config.aws.tfbackend
             echo "access_key = \"$aws_access_key\"" >> config.aws.tfbackend
             echo "secret_key = \"$aws_secret_key\"" >> config.aws.tfbackend
-      - presist_to_workspace:
+      - persist_to_workspace:
           root: .
 
   deploy:
