--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: '2.1'
 
 executors:
   terraform:
-    working_directory: /tmp
     docker:
       - image: naiama/longor:0.1.0
         auth:
@@ -21,7 +20,7 @@ jobs:
             echo "access_key = \"$aws_access_key\"" >> config.aws.tfbackend
             echo "secret_key = \"$aws_secret_key\"" >> config.aws.tfbackend
       - persist_to_workspace:
-          root: workspace
+          root: /home/circleci/project
           paths: 
             - config.aws.tfbackend
 
@@ -30,7 +29,7 @@ jobs:
     resource_class: medium
     steps:
       - attach_workspace:
-          at: /tmp/workspace
+          at: /home/circleci/project
       - checkout
       - run:
           command: |
@@ -53,7 +52,7 @@ jobs:
     resource_class: medium
     steps:
       - attach_workspace:
-          at: /tmp/workspace
+          at: /home/circleci/project
       - checkout
       - run:
           command: |
@@ -68,11 +67,11 @@ workflows:
       - deploy:
           context:
             - n3-zeus
-  destroy:
-    jobs:
-      - config:
-          context:
-            - terraform
-      - destroy:
-          context:
-            - n3-zeus
+              # destroy:
+              # jobs:
+              # - config:
+              # context:
+              # - terraform
+              # - destroy:
+              # context:
+              # - n3-zeus
