--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 parameters:
   deploy:
-    default: false
+    default: true
     type: boolean
   destroy:
     default: false
@@ -68,12 +68,6 @@ jobs:
 workflows:
   deploy:
     when: << pipeline.parameters.deploy >>
-    triggers:
-      - schedule:
-          cron: "0 9 * * *"
-          filters:
-            branches:
-              only: main
     jobs:
       - config:
           context:
@@ -85,12 +79,6 @@ workflows:
             - n3-zeus
   destroy:
     when: << pipeline.parameters.destroy >>
-    triggers:
-      - schedule:
-          cron: "0 21 * * *"
-          filters:
-            branches:
-              only: main
     jobs:
       - config:
           context:
