--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,9 @@ jobs:
           at: ~/
       - run:
           command: |
+            terraform init -reconfigure -backend-config=config.aws.tfbackend
+      - run:
+          command: |
             terraform destroy
 
 workflows:
