--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             terraform init -reconfigure -backend-config=config.aws.tfbackend
       - run:
           command: |
-            terraform destroy
+            terraform destroy -auto-approve
 
 workflows:
   deploy:
